<resources>
    <string name="app_name">ExpenseMate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Register -->
    <string name="full_name_label">Full name</string>
    <string name="full_name_hint">Enter your full name</string>
    <string name="username_label">Username</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="confirm_password_hint">Enter your password again</string>
    <string name="register">Register</string>
    <string name="already_have_account"><font color="#666666">Already have an account? </font> <font color="#2C7D77"><b>Login</b></font></string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="dont_have_account"><font color="#666666">Don\'t have an account? </font> <font color="#2C7D77"><b>Register</b></font></string>

    <!-- Transaction -->
    <string name="transaction">Transaction</string>
    <string name="description_label">Description</string>
    <string name="description_hint">Enter transaction description</string>
    <string name="amount_label">Amount</string>
    <string name="amount_hint">Enter transaction amount</string>
    <string name="date_label">Date</string>
    <string name="date_hint">Enter transaction date</string>
    <string name="image_label">Image</string>
    <string name="add_image">Add Image</string>
    <string name="save">Save</string>

    <!-- Home page -->
    <string name="greeting">Good afternoon</string>
    <string name="full_name">David Čadež</string>
    <string name="total_balance">Total balance</string>
    <string name="total_balance_num">2,548.00€</string>
    <string name="income">Income</string>
    <string name="income_num">1,840.00€</string>
    <string name="expenses">Expenses</string>
    <string name="expenses_num">284.00€</string>
    <string name="todays_transactions">Today\'s transactions</string>
    <string name="see_all">See all</string>

    <!-- History -->
    <string name="history">History</string>
    <string name="expense">Expense</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <!-- User profile -->
    <string name="profile">Profile</string>
    <string name="username">\@cadezd</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_all_transactions">Delete all transactions</string>
    <string name="logout">Logout</string>

    <!-- Statistics -->
    <string name="statistics">Statistics</string>
    <string name="top_spending">Top spending</string>
    <string name="all">All</string>



</resources>